tests/fixtures/invalid/len_no_args.py
# len() takes exactly 1 argument
print(len())
